# milr-toy-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
container/: Containerfile.fedora40  Containerfile.fedora41  Dockerfile
docs/: design.md
mlir/: dialect-mlp.cpp  dialect-mlp.h  dialect-mlp.td  ops-mlp.cpp  ops-mlp.h  ops-mlp.td  opt-mlp.cpp
src/: ast.rs  command.rs  exit_code.rs  lex.rs  main.rs  options.rs  parse.rs  sem.rs  sem_decl.rs  sem_type.rs
tests/: lit-tests.rs
tests/lit-tests/: ast_arith.mlp  ast_call_1.mlp  ast_call_2.mlp  ast_call_3.mlp  ast_call_4.mlp  ast_ch1_1.mlp  ast_ch1_2.mlp  ast_ch1_3.mlp  ast_ch1_4.mlp  ast_mat_mul_1.mlp  ast_product_1.mlp  ast_product_2.mlp  ast_redecl_3.mlp  ast_redecl_4.mlp  ast_scalar_1.mlp  ast_scalar_2.mlp  ast_shadow_1.mlp  ast_shadow_2.mlp  ast_sub_1.mlp  ast_sub_2.mlp  lex_comment.mlp  lex_drop.mlp  lex_float.mlp  lex_float_bad.mlp  lex_hello.mlp  lex_idents.mlp  lex_keyword.mlp  lex_nodrop.mlp  lex_number.mlp  lex_number_enhanced.mlp  lex_other.mlp  lex_stdin.mlp  lex_trailing_whitespace.mlp  lit.cfg  parse_arith.mlp  parse_builtins.mlp  parse_call_1.mlp  parse_call_2.mlp  parse_call_3.mlp  parse_call_4.mlp  (+40 more)
