[package]
name = "mlpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = { version = "=181.1.1", features = ["force-dynamic"] }
mlir-sys = { version = "=0.2.2" }   #   LLVM-18
#mlir-sys = { version = "=0.3.0" }   #   LLVM-19

[dev-dependencies]

[lints.clippy]
unused_unit = "allow"
