[package]
name = "mlpc"
version = "0.1.0"
edition = "2021"
authors = ["Giordano Salvador <73959795+e3m3@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = { version = "=191.0.0", features = ["force-dynamic"] }
mlir-sys = { version = "=0.3.0" }
multimap = { version = "0.10.0" }
mlir = { version = "0.3.9", git = "https://github.com/e3m3/mlir-rust.git" }

[dev-dependencies]

[lints.clippy]
unused_unit = "allow"
